@@ -92,3 +92,37 @@ core.register_on_mods_loaded(function()
 		end
 	end
 end)
+
+
+if sounds.enable_biome_sounds then
+	local timer = 0
+	local interval = tonumber(core.settings:get("sounds.biome_interval")) or 30
+	local chance = tonumber(core.settings:get("sounds.biome_chance")) or 20
+
+	interval = interval >= 0 and interval or 0
+	chance = chance >= 0 and chance or 0
+	chance = chance <= 100 and chance or 100
+
+	core.register_globalstep(function(dtime)
+		timer = timer + dtime
+		if timer < interval then
+			return
+		end
+		timer = 0
+
+		if math.random(100) <= chance then
+			for _, player in ipairs(core.get_connected_players()) do
+				local p_name = player:get_player_name()
+				local b_id = core.get_biome_data(player:get_pos()).biome
+
+				if b_id then
+					local b_sounds = sounds:get_biome_sounds(core.get_biome_name(b_id))
+
+					if type(b_sounds) == "SoundGroup" then
+						b_sounds()
+					end
+				end
+			end
+		end
+	end)
+end
