@@ -6,5 +6,14 @@
 # disable all built-in groups.
 sounds.disabled_groups (Disabled sound groups) string
 
+# Enables/Disables ambiance sounds for biomes.
+sounds.enable_biome_sounds (Enable biome sounds) bool true
+
+# Interval between playing biome sounds.
+sounds.biome_interval (Biome sound interval) int 30 0
+
+# Chance that sound will be played at interval.
+sounds.biome_chance (Biome sound chance) int 20 0 100
+
 # Enables sounds testing with /sounds_test chat command.
 sounds.enable_tests (Sounds tests) bool false
